[package]
name = "best_time_to_buy_and_sell_stock_iii"
version = "0.1.0"
edition = "2021"

authors = ["Calvin <c6supper@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "best_time_to_buy_and_sell_stock_iii"
test = true            # Is tested by default.
doc = true             # Is documented by default.
