[package]
name = "clone_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embed-doc-image = "0.1.4"

[lib]
name = "clone_graph"
test = true            # Is tested by default.
doc = true             # Is documented by default.