[package]
name = "minimum_size_subarray_sum"
version = "0.1.0"
edition = "2021"

authors = ["Calvin <c6supper@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "minimum_size_subarray_sum"
test = true            # Is tested by default.
doc = true             # Is documented by default.
