[package]
name = "two_sum"
version = "0.1.0"
edition = "2021"

authors = ["Calvin <c6supper@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benches"
harness = false

[lib]
name = "two_sum"
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
doc = true             # Is documented by default.
